2.0.0:
  - Ansible Playbook Run as Cloudify lifecycle operation.
  - Implied host relationship: cloudify.ansible.relationships.connected_to_host.
2.0.1:
  - Where retried hosts keys are overwritten with the path of the previous key.
  - Add more requirements
  - Support more groups from deployment groups
2.0.3:
  - Update Ansible Version
  - Fix error when stdout is required in logging.
2.0.4:
  - Catch and raise Ansible parser errors during execute.
  - Add SSH StrictHostKeyChecking by default.
2.1.0:
  - New method is transparent usage of ansible-playbook binary. The version used is that which exists in the PATH variable, which is taken from the Wagon.
  - replace site_yaml_path with playbook_path.
  - Deprecated these keys: ['site_yaml_path', 'inventory_config', 'variable_manager_config', 'passwords', 'modules', 'private_key_file'].